After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697567 - Critical Assertion Errors
Critical Assertion Errors
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
2.99
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-08 15:43 UTC by Dean Hunter
Modified: 2016-12-13 23:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Removes mnemonic from search entry on quit (2.85 KB, patch)
2016-11-30 02:00 UTC, gnome.vrb
none Details | Review
source: Use rhythmdb_query_free for RhythmDBQuery, as it is a GPtrArray ( not GObject ) (1.67 KB, patch)
2016-11-30 02:02 UTC, gnome.vrb
none Details | Review
Removes mnemonic from search entry on quit (2.87 KB, patch)
2016-11-30 15:21 UTC, gnome.vrb
none Details | Review
source: Use rhythmdb_query_free for RhythmDBQuery, as it is a GPtrArray ( not GObject ) (1.53 KB, patch)
2016-12-12 04:20 UTC, gnome.vrb
committed Details | Review
Removes mnemonic from search entry on quit (7.48 KB, patch)
2016-12-12 04:21 UTC, gnome.vrb
rejected Details | Review

Description Dean Hunter 2013-04-08 15:43:30 UTC
While testing rhythmbox-2.99-1.fc19 in response to https://bugzilla.redhat.com/show_bug.cgi?id=908540 I encountered several critical errors just opening and closing the application:

[local@fedora19] # rhythmbox

(rhythmbox:1804): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed

(rhythmbox:1804): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed

(rhythmbox:1804): Gtk-WARNING **: mnemonic "s" wasn't removed for widget (0x23d48c0)

[local@fedora19] #
Comment 1 Torben Andresen 2016-02-16 14:48:04 UTC
Hi,

i'm ArchLinux with Rhythmbox 3.3 and also geht this error:
Gtk-WARNING **: mnemonic "s" wasn't removed for widget (0x282e6e0)
Comment 2 gnome.vrb 2016-11-30 02:00:11 UTC
Created attachment 341015 [details] [review]
Removes mnemonic from search entry on quit

Fixes mnemonic "s" wasn't removed for widget.
Comment 3 gnome.vrb 2016-11-30 02:02:38 UTC
Created attachment 341016 [details] [review]
source: Use rhythmdb_query_free for RhythmDBQuery, as it is a GPtrArray ( not GObject )

Fixes - g_object_unref: assertion 'G_IS_OBJECT (object)' failed
Comment 4 gnome.vrb 2016-11-30 15:21:47 UTC
Created attachment 341060 [details] [review]
Removes mnemonic from search entry on quit

Added (transfer none)
Comment 5 Jonathan Matthew 2016-12-11 02:11:39 UTC
Review of attachment 341016 [details] [review]:

.

::: sources/rb-browser-source.c
@@ +210,3 @@
+	if (source->priv->search_query != NULL) {
+		rhythmdb_query_free (source->priv->search_query);
+		source->priv->search_query = NULL;

why not g_clear_pointer (&source->priv->search_query, rhythmdb_query_free) ?
Comment 6 Jonathan Matthew 2016-12-11 02:13:30 UTC
Review of attachment 341060 [details] [review]:

I really don't like how this works.
Comment 7 gnome.vrb 2016-12-12 04:20:32 UTC
Created attachment 341792 [details] [review]
source: Use rhythmdb_query_free for RhythmDBQuery, as it is a GPtrArray ( not GObject )
Comment 8 gnome.vrb 2016-12-12 04:21:13 UTC
Created attachment 341793 [details] [review]
Removes mnemonic from search entry on quit
Comment 9 Jonathan Matthew 2016-12-12 21:38:49 UTC
Review of attachment 341793 [details] [review]:

this is far too much work to do just to fix a single warning that happens on exit.
Comment 10 gnome.vrb 2016-12-12 21:46:21 UTC
That was the reason for "attachment 341060 [details] [review]".
Comment 11 Jonathan Matthew 2016-12-13 22:17:31 UTC
Review of attachment 341792 [details] [review]:

pushed as commit e8e8a90 with a better commit message
Comment 12 gnome.vrb 2016-12-13 23:06:17 UTC
(In reply to vrishab from comment #10)
> That was the reason for "attachment 341060 [details] [review] [review]".

diff --git a/shell/rb-shell.c b/shell/rb-shell.c
index 555e0ee..7ae0227 100644
--- a/shell/rb-shell.c
+++ b/shell/rb-shell.c
@@ -2518,6 +2518,9 @@ rb_shell_quit (RBShell *shell,
 	/* or maybe just _quit */
 	/* g_application_release (G_APPLICATION (shell->priv->application)); */
 
+	/* deselect the current page so it drops mnemonics etc. */
+	rb_display_page_deselected (shell->priv->selected_page);
+
 	rb_settings_delayed_sync (shell->priv->settings, NULL, NULL, NULL);
 	gtk_widget_destroy (GTK_WIDGET (shell->priv->window));


Better patch.