Use rhythmdb_query_free for RhythmDBQuery, since it's not a GObject

https://bugzilla.gnome.org/show_bug.cgi?id=697567